# proyecto-git

./: CMakeLists.txt
activity/: CMakeLists.txt  activity.cc  activity.h
director/: CMakeLists.txt  director.cc  director.h
executables/: CMakeLists.txt  main.cc  prueba_activity.cc
general/: CMakeLists.txt  general.cc  general.h
organizador/: CMakeLists.txt  organizador.cc  organizador.h
registered/: CMakeLists.txt  registered.cc  registered.h
user/: CMakeLists.txt  user.cc  user.h
