cmake_minimum_required(VERSION 3.10)
set(CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED true)
project(Proyecto_de_ingenieria_del_software)
add_subdirectory(activity)
add_subdirectory(director)
add_subdirectory(executables)
add_subdirectory(organizador)
add_subdirectory(registered)
add_subdirectory(user)
add_subdirectory(general)